fixed footer and sidebar, change sliding artcicles to fliping articles

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,41 @@ p {
     }
 }
 
+.sidebar {
+    position: fixed;
+    top: 10rem;
+    right: 0rem;
+    justify-items: end;
+    z-index: 49;
+    color: var(--color-amber-50);
+    transition: 1s;
+    div {
+        background-color: rgba(62, 62, 62, 0.95);
+        display: none;
+        height: 100vh;
+        border-radius: 1rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+}
+    
+
+.sidebar h1 {
+    color: var(--color-amber-50);
+    font-size: 1.5rem;
+}
+
+.sidebar:hover {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .author {
     font-family: "Mr Dafoe", cursive;
     font-size: 1.5rem;
@@ -97,43 +132,96 @@ p {
     padding-right: 1rem;
 }
 
-.sliding-article {
+.flip-card {
+    background-color: transparent;
+    width: 100%;
     height: 4rem;
-    text-align: center;
-    line-height: normal;
+    perspective: 1000px;
     border: 1px solid rgb(62, 62, 62);
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: var(--color-amber-50);
+    color: rgb(62, 62, 62);
+    align-content: center;
+    line-height: 1.5rem;
+  }
+  
+  .flip-card-back {
+    background-color: rgb(62, 62, 62);
+    color: var(--color-amber-50);
+    transform: rotateY(180deg);
+  }
+
+footer {
+    background-color: rgb(62, 62, 62);
+    color: var(--color-amber-50);
+    width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     align-content: center;
-    overflow: hidden;
-    scrollbar-width: 0%;
-    scrollbar-color: rgba (0,0,0,0);
-    width: 100%;
-    transition: 1s;
-}
-
-.sliding-article h3 {
-    font-size: 1.25rem;
-    align-content: center;
-    width: 100%;
-    transition: width 1000ms, visibility 200ms;
-}
-
-.sliding-article div {
-    align-content: center;
-    width: 0%;
-    visibility: hidden;
-    transition: width 1000ms, visibility 200ms;
-}
-
-.sliding-article:hover {
-    h3 {
-        width: 0%;
-        visibility: hidden;
+    a {
+        text-decoration: none;
+        color: var(--color-amber-50);
     }
+    h2 {
+        color: var(--color-amber-50);
+    }
+}
 
-    div {
-        width: 100%;
-        visibility: visible;
+footer > div {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+@media only screen and (max-width: 640px) {
+    footer ul {
+        display: none;
+    }
+    footer > div {
+        flex-direction: column;
+        gap: 0;
+        h2 {
+            font-size: 1rem;
+        }
+    }
+    
+}
+
+@media only screen and (max-width: 1024px) {
+    .sidebar {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1291px) {
+    .sidebar {
+        top: 11.5rem;
     }
 }
