--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -367,6 +367,9 @@
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-auto {
     margin-top: auto;
   }
@@ -517,8 +520,8 @@
   .max-w-20 {
     max-width: calc(var(--spacing) * 20);
   }
-  .max-w-\[40\%\] {
-    max-width: 40%;
+  .max-w-\[50\%\] {
+    max-width: 50%;
   }
   .max-w-\[85\%\] {
     max-width: 85%;
@@ -1319,6 +1322,12 @@
   .object-top {
     object-position: top;
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -1994,9 +2003,9 @@
       max-height: calc(var(--spacing) * 28);
     }
   }
-  .lg\:max-h-48 {
+  .lg\:max-h-64 {
     @media (width >= 64rem) {
-      max-height: calc(var(--spacing) * 48);
+      max-height: calc(var(--spacing) * 64);
     }
   }
   .lg\:w-1\/4 {
@@ -2063,6 +2072,12 @@
       border-bottom-width: 1px;
     }
   }
+  .lg\:border-b-0 {
+    @media (width >= 64rem) {
+      border-bottom-style: var(--tw-border-style);
+      border-bottom-width: 0px;
+    }
+  }
   .lg\:pt-28 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 28);
@@ -2104,6 +2119,7 @@ i {
 }
 p {
   text-indent: 1rem;
+  line-height: 1.25rem;
 }
 #hamburger-menu {
   align-content: center;
@@ -2194,6 +2210,23 @@ p {
   align-self: flex-end;
   padding-right: 1rem;
 }
+.date-and-title {
+  width: 100%;
+  div {
+    margin-left: 0.5rem;
+    margin-right: auto;
+    margin-bottom: 0;
+    font-size: small;
+    font-style: italic;
+  }
+  h2 {
+    line-height: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    padding: 0;
+  }
+}
 .flip-card {
   background-color: transparent;
   width: 100%;
@@ -2230,6 +2263,11 @@ p {
   background-color: rgb(62, 62, 62);
   color: var(--color-amber-50);
   transform: rotateY(180deg);
+  align-content: center;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 footer {
   background-color: rgb(62, 62, 62);
