--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -343,9 +343,6 @@
       max-width: 96rem !important;
     }
   }
-  .mx-0 {
-    margin-inline: calc(var(--spacing) * 0);
-  }
   .mx-0\.5 {
     margin-inline: calc(var(--spacing) * 0.5);
   }
@@ -360,9 +357,6 @@
   }
   .my-2 {
     margin-block: calc(var(--spacing) * 2);
-  }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
   }
   .mt-18 {
     margin-top: calc(var(--spacing) * 18);
@@ -484,9 +478,6 @@
   .max-h-36 {
     max-height: calc(var(--spacing) * 36);
   }
-  .max-h-\[50\%\] {
-    max-height: 50%;
-  }
   .max-h-none {
     max-height: none;
   }
@@ -496,14 +487,8 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
   }
   .w-2\/9 {
     width: calc(2/9 * 100%);
@@ -520,14 +505,8 @@
   .w-screen {
     width: 100vw;
   }
-  .max-w-1 {
-    max-width: calc(var(--spacing) * 1);
-  }
   .max-w-1\/5 {
     max-width: calc(1/5 * 100%);
-  }
-  .max-w-3 {
-    max-width: calc(var(--spacing) * 3);
   }
   .max-w-3\/5 {
     max-width: calc(3/5 * 100%);
@@ -1349,9 +1328,6 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
-  .py-0 {
-    padding-block: calc(var(--spacing) * 0);
-  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
   }
@@ -2011,6 +1987,16 @@
       display: flex;
     }
   }
+  .md\:max-h-36 {
+    @media (width >= 48rem) {
+      max-height: calc(var(--spacing) * 36);
+    }
+  }
+  .md\:max-w-\[25\%\] {
+    @media (width >= 48rem) {
+      max-width: 25%;
+    }
+  }
   .lg\:mx-auto {
     @media (width >= 64rem) {
       margin-inline: auto;
@@ -2036,16 +2022,6 @@
       height: calc(var(--spacing) * 44);
     }
   }
-  .lg\:h-48 {
-    @media (width >= 64rem) {
-      height: calc(var(--spacing) * 48);
-    }
-  }
-  .lg\:h-52 {
-    @media (width >= 64rem) {
-      height: calc(var(--spacing) * 52);
-    }
-  }
   .lg\:h-54 {
     @media (width >= 64rem) {
       height: calc(var(--spacing) * 54);
@@ -2061,6 +2037,11 @@
       max-height: calc(var(--spacing) * 64);
     }
   }
+  .lg\:max-h-full {
+    @media (width >= 64rem) {
+      max-height: 100%;
+    }
+  }
   .lg\:w-1\/4 {
     @media (width >= 64rem) {
       width: calc(1/4 * 100%);
@@ -2069,11 +2050,6 @@
   .lg\:w-1\/5 {
     @media (width >= 64rem) {
       width: calc(1/5 * 100%);
-    }
-  }
-  .lg\:w-2\/5 {
-    @media (width >= 64rem) {
-      width: calc(2/5 * 100%);
     }
   }
   .lg\:w-2\/17 {
@@ -2086,9 +2062,24 @@
       width: calc(3/4 * 100%);
     }
   }
+  .lg\:w-\[95\%\] {
+    @media (width >= 64rem) {
+      width: 95%;
+    }
+  }
+  .lg\:max-w-\[40\%\] {
+    @media (width >= 64rem) {
+      max-width: 40%;
+    }
+  }
   .lg\:max-w-\[1300px\] {
     @media (width >= 64rem) {
       max-width: 1300px;
+    }
+  }
+  .lg\:max-w-full {
+    @media (width >= 64rem) {
+      max-width: 100%;
     }
   }
   .lg\:columns-3 {
@@ -2111,11 +2102,6 @@
       justify-content: space-around;
     }
   }
-  .lg\:gap-0 {
-    @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 0);
-    }
-  }
   .lg\:gap-0\.5 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 0.5);
@@ -2134,11 +2120,6 @@
   .lg\:gap-4 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 4);
-    }
-  }
-  .lg\:gap-\[1px\] {
-    @media (width >= 64rem) {
-      gap: 1px;
     }
   }
   .lg\:border-0 {
@@ -2175,6 +2156,11 @@
       padding-right: calc(var(--spacing) * 0.5);
     }
   }
+  .xl\:max-h-full {
+    @media (width >= 80rem) {
+      max-height: 100%;
+    }
+  }
   .xl\:w-1\/4 {
     @media (width >= 80rem) {
       width: calc(1/4 * 100%);
@@ -2188,6 +2174,16 @@
   .xl\:w-2\/11 {
     @media (width >= 80rem) {
       width: calc(2/11 * 100%);
+    }
+  }
+  .xl\:max-w-\[50\%\] {
+    @media (width >= 80rem) {
+      max-width: 50%;
+    }
+  }
+  .xl\:max-w-full {
+    @media (width >= 80rem) {
+      max-width: 100%;
     }
   }
   .xl\:flex-row {
@@ -2204,6 +2200,17 @@
     @media (width >= 80rem) {
       border-top-style: var(--tw-border-style);
       border-top-width: 1px;
+    }
+  }
+  .xl\:border-r {
+    @media (width >= 80rem) {
+      border-right-style: var(--tw-border-style);
+      border-right-width: 1px;
+    }
+  }
+  .xl\:pr-0\.5 {
+    @media (width >= 80rem) {
+      padding-right: calc(var(--spacing) * 0.5);
     }
   }
 }
@@ -2330,6 +2337,7 @@ p {
 }
 .date-and-title {
   width: 100%;
+  margin-bottom: 2px;
   div {
     margin-left: 0.5rem;
     margin-right: auto;
