added some left-margin for footer logo and social media for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ footer > div {
 
     #logo-social-media {
         max-width: 6rem;
+        margin-left: 0.5rem;
         i {
             font-size: x-small;
         }
