--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -2421,6 +2421,7 @@ footer > div {
   }
   #logo-social-media {
     max-width: 6rem;
+    margin-left: 0.5rem;
     i {
       font-size: x-small;
     }
