--- a/css/non-index-style.css
+++ b/css/non-index-style.css
@@ -53,7 +53,6 @@
 
 @media only screen and (min-width: 1024px) {
     .normal-sidebar {
-        width: full;
         max-width: 25%;
         height: auto;
         position: static;
@@ -85,6 +84,7 @@
 }
 
 .stock-container {
+    display: block;
     width: 100%;
     overflow: hidden;
     background-color: black;
@@ -119,7 +119,7 @@
 }
 
 .stock-banner {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     gap: 4rem;
