--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -367,12 +367,6 @@
   .-mt-0\.5 {
     margin-top: calc(var(--spacing) * -0.5);
   }
-  .mt-0 {
-    margin-top: calc(var(--spacing) * 0);
-  }
-  .mt-0\.5 {
-    margin-top: calc(var(--spacing) * 0.5);
-  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -543,9 +537,6 @@
   }
   .max-w-\[50\%\] {
     max-width: 50%;
-  }
-  .max-w-\[75\%\] {
-    max-width: 75%;
   }
   .max-w-\[85\%\] {
     max-width: 85%;
@@ -1981,11 +1972,6 @@
       }
     }
   }
-  .max-md\:max-w-full {
-    @media (width < 48rem) {
-      max-width: 100%;
-    }
-  }
   .max-md\:group-hover\:block {
     @media (width < 48rem) {
       &:is(:where(.group):hover *) {
@@ -2051,11 +2037,6 @@
       max-width: 25%;
     }
   }
-  .md\:max-w-full {
-    @media (width >= 48rem) {
-      max-width: 100%;
-    }
-  }
   .lg\:mx-auto {
     @media (width >= 64rem) {
       margin-inline: auto;
@@ -2079,6 +2060,26 @@
   .lg\:h-54 {
     @media (width >= 64rem) {
       height: calc(var(--spacing) * 54);
+    }
+  }
+  .lg\:h-56 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 56);
+    }
+  }
+  .lg\:h-60 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 60);
+    }
+  }
+  .lg\:h-64 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 64);
+    }
+  }
+  .lg\:h-66 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 66);
     }
   }
   .lg\:max-h-28 {
@@ -2119,16 +2120,6 @@
   .lg\:max-w-\[75\%\] {
     @media (width >= 64rem) {
       max-width: 75%;
-    }
-  }
-  .lg\:max-w-\[700px\] {
-    @media (width >= 64rem) {
-      max-width: 700px;
-    }
-  }
-  .lg\:max-w-\[900px\] {
-    @media (width >= 64rem) {
-      max-width: 900px;
     }
   }
   .lg\:max-w-\[1300px\] {
@@ -2238,11 +2229,6 @@
   .xl\:max-w-\[50\%\] {
     @media (width >= 80rem) {
       max-width: 50%;
-    }
-  }
-  .xl\:max-w-\[1300px\] {
-    @media (width >= 80rem) {
-      max-width: 1300px;
     }
   }
   .xl\:max-w-full {
@@ -2425,7 +2411,7 @@ p {
 .flip-card {
   background-color: transparent;
   width: 100%;
-  height: 4rem;
+  height: 6rem;
   perspective: 1000px;
   border: 1px solid rgb(62, 62, 62);
 }
